src/objects/CareMeridian_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Ancillary_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Ancillary Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ancillary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Ancillary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Discounted Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BilledRate_Level_1__c</fullName>
        <description>This field is used for NeuroRestorative Contracts.</description>
        <label>BilledRate Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BilledRate_Level_2__c</fullName>
        <description>This field is used by NeuroRestorative Contracts.</description>
        <label>BilledRate Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BilledRate_Level_3__c</fullName>
        <description>This field is used by NeuroRestorative Contracts.</description>
        <label>BilledRate Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Rate_Bed_Holds__c</fullName>
        <label>Billed Rate Bed Holds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Rate_Level_1__c</fullName>
        <label>Billed Rate Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Rate_Level_2__c</fullName>
        <label>Billed Rate Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Rate_Level_3__c</fullName>
        <label>Billed Rate Level 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Format__c</fullName>
        <label>Billing Format</label>
        <picklist>
            <picklistValues>
                <fullName>UB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Comp</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Case Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counselling_Services_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Counselling Services Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Counselling_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Counselling Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customized_DME_Details__c</fullName>
        <label>Customized DME Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customized_DME__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized DME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Before_Term__c</fullName>
        <formula>IF(Termination_Date__c &lt; today(), (Termination_Date__c - today())*-1, 0)</formula>
        <label>Days Before Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dialysis_Details__c</fullName>
        <label>Dialysis Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dialysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusion_Details__c</fullName>
        <label>Exclusion Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclusion_Type__c</fullName>
        <label>Exclusion Type</label>
        <picklist>
            <picklistValues>
                <fullName>1:1 Sitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-CareMeridian Radiology Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialized DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Beds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wound Vac</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <label>Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_Details__c</fullName>
        <label>Fee Schedule Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule__c</fullName>
        <label>Fee Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>All-Inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filing_Deadline_Other__c</fullName>
        <label>Filing Deadline - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Deadline__c</fullName>
        <label>Filing Deadline</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filing_Requirements__c</fullName>
        <label>Filing Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formal_Education_Program_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Formal Education Program Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formal_Education_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Formal Education Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Name__c</fullName>
        <label>Level 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Name__c</fullName>
        <label>Level 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Name__c</fullName>
        <label>Level 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Artesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowan Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escondido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Marks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno-Weber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilroy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granite Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Habra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laramie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Littleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ludlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxnard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix-Arcadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasanton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santiago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tustin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilbur</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Medical_Equipment_Supplies_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Medical Equipment/Supplies Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Equipment_Supplies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Medical Equipment/Supplies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medications_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Medications Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Medications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_to_get_Notified__c</fullName>
        <description>This field is used to store the value of the number of days in advance a notification has to be sent to the user before the Notice period i.e., this is a notification about the notice period.</description>
        <label>Need to get Notified</label>
        <picklist>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Neuro_Term_Notice_Date__c</fullName>
        <description>This field is used to store the exact date of sending out the notification. This field is referred in the time trigger Workflow.</description>
        <formula>Termination_Date__c  - (VALUE(TEXT(Termination_Notice__c)) + VALUE(TEXT( Need_to_get_Notified__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neuro Need Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Neuro_Termination_Not_Date__c</fullName>
        <formula>Termination_Date__c  - VALUE(TEXT(Termination_Notice__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neuro Termination Not. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Neuropsych_Eval_Beh_Anal_Therapy_Detail__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Neuropsych Eval/Beh.Anal./Therapy Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Neuropsych_Eval_Beh_Analysis_Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Neuropsych Eval/Beh. Analysis&amp;Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Contract</label>
        <referenceTo>CareMeridian_Contract__c</referenceTo>
        <relationshipName>Next_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_CareMeridian_Radiology_Services_Detl__c</fullName>
        <label>Non-CareMeridian Radiology Services Detl</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_CareMeridian_Radiology_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-CareMeridian Radiology Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nursing_Services_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Nursing Services Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nursing_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Nursing Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Ended_Termintion_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Ended Termination Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>CareMeridian</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Ex1_Details__c</fullName>
        <label>Other Ex Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Ex1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Ex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Ex2_Details__c</fullName>
        <label>Other Ex Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Ex2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Ex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Ex3_Details__c</fullName>
        <label>Other Ex Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Ex3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Ex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Deadline_Other__c</fullName>
        <label>Payment Deadline - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Deadline__c</fullName>
        <label>Payment Deadline</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Requirements__c</fullName>
        <label>Payment Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Discount__c</fullName>
        <label>Percentage Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Details__c</fullName>
        <label>Pharmacy Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Services_Consultations_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Physician Services/Consultations Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physician_Services_Consultations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physician Services/Consultations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Visits_Details__c</fullName>
        <label>Physician Visits Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physician_Visits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physician Visits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accident and Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Capitated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Noncapitated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COBRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Non-Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran&apos;s Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers&apos; Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>CareMeridian_Contract__c</referenceTo>
        <relationshipName>Previous_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Details__c</fullName>
        <label>Reimbursement Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Bed_Holds__c</fullName>
        <label>Reimbursement Rate Bed Holds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Charges_1__c</fullName>
        <description>This is only used by NeuroRestorative Contracts.</description>
        <label>Reimbursement Rate Charges 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Charges_2__c</fullName>
        <description>This is used only by NeuroRestorative contracts.</description>
        <label>Reimbursement Rate Charges 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Charges_3__c</fullName>
        <description>This is only used by NeuroRestorative Contracts.</description>
        <label>Reimbursement Rate Charges 3</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Charges_Bed_Holds__c</fullName>
        <label>Reimbursement Rate Charges Bed Holds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Level_1__c</fullName>
        <label>Reimbursement Rate Level 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Level_2__c</fullName>
        <label>Reimbursement Rate Level 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Level_3__c</fullName>
        <label>Reimbursement Rate Level 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renegotiation_Deadline__c</fullName>
        <label>Renegotiation Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed / Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Termination_Notice_Other__c</fullName>
        <label>Required Termination Notice - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Termination_Notice__c</fullName>
        <label>Required Termination Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resubmission_Deadline_Other__c</fullName>
        <label>Resubmission Deadline - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resubmission_Deadline_Requirements__c</fullName>
        <label>Resubmission Deadline Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resubmission_Deadline__c</fullName>
        <label>Resubmission Deadline</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Room_Board_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Room &amp; Board Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Room_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for NeuroRestorative Contracts.</description>
        <label>Room &amp; Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Community</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specialized_DME_Details__c</fullName>
        <label>Specialized DME Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialized_DME__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialized DME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty_Beds_Details__c</fullName>
        <label>Specialty Beds Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialty_Beds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialty Beds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
</CustomObject>